# pca_nir

./: .gitignore  README.md  pca_object.py  pyproject.toml  spectra_utils.py
src/pca_nir_utils/: __init__.py  pca_object.py  spectra_utils.py
