[tool.poetry]
name = "pca-nir-utils"
version = "1.0.0"
description = "PCA objects and NIR spectra manipulation utilities"
authors = ["Maximiliano Bidegain <maxibide@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
numpy = "^2.2.5"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
scipy = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
